# anki-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
anki_cli/backends/: __init__.py  ankiconnect.py  detect.py  direct.py  factory.py  protocol.py
anki_cli/cli/: app.py  formatter.py
anki_cli/cli/commands/: browse.py  cards.py  deck.py  general.py  note.py  notetype.py  review.py  search.py  tag.py
anki_cli/core/: search.py  template.py
anki_cli/db/: anki_direct.py
anki_cli/models/: config.py  output.py
anki_cli/proto/anki/collection/: __init__.py
anki_cli/proto/anki/deck_config/: __init__.py
anki_cli/proto/anki/decks/: __init__.py
anki_cli/proto/anki/generic/: __init__.py
anki_cli/proto/anki/notetypes/: __init__.py
anki_cli/proto/anki/sync/: __init__.py
anki_cli/tui/: browse_app.py  colors.py  repl.py  review_app.py
tests/backends/: test_ankiconnect.py  test_ankiconnect_deck_notetype_paths.py  test_ankiconnect_operations.py  test_detect.py  test_detect_helpers.py  test_direct_backend.py  test_factory.py
tests/cli/: test_app_bootstrap.py  test_browse_command.py  test_cards_commands_actions.py  test_cards_commands_detail.py  test_cards_helpers.py  test_config_commands.py  test_deck_commands.py  test_deck_helpers.py  test_dispatcher.py  test_general_commands.py  test_note_commands.py  test_note_helpers.py  test_notetype_commands.py  test_notetype_helpers.py  test_review_commands.py  test_review_helpers.py  test_search_commands.py  test_shell_command.py  test_tag_commands.py
tests/integration/: test_anki_direct_answer_card.py  test_anki_direct_card_mutators.py  test_anki_direct_card_note_revlog_reads.py  test_anki_direct_deck_config_and_add_notes.py  test_anki_direct_deck_write_paths.py  test_anki_direct_delete_and_tag_reads.py  test_anki_direct_due.py  test_anki_direct_find_queries.py  test_anki_direct_note_mutators.py  test_anki_direct_notetype_mutators.py  test_anki_direct_parse_decode.py  test_anki_direct_preview_ratings.py  test_anki_direct_read_apis.py  test_anki_direct_snapshot_restore.py  test_anki_direct_suspend_and_tags.py
tests/tui/: test_browse_app.py  test_repl_helpers.py  test_repl_render_card_inline.py  test_review_app.py
tests/unit/: test_config_runtime.py  test_entrypoint_and_colors.py  test_formatter.py  test_models.py  test_params.py  test_scheduler.py  test_template.py  test_undo.py
