[project]
name = "anki-cli"
version = "0.1.0"
description = "Hybrid Anki CLI for humans and agents"
requires-python = ">=3.12"
dependencies = [
  "click",
  "rich",
  "pydantic",
  "fsrs",
  "httpx",
  "betterproto",
  "pyperclip>=1.11.0",
]

[project.optional-dependencies]
tui = ["textual"]
clipboard = ["pyperclip"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
]

[project.scripts]
anki = "anki_cli.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ty.environment]
python-version = "3.14"
