[project]
name = "anki-cli"
version = "0.1.0"
description = "Hybrid Anki CLI for humans and agents"
requires-python = ">=3.12,<3.14"
dependencies = [
  "click",
  "rich",
  "pydantic",
  "fsrs",
  "httpx",
  "betterproto[compiler]>=2.0.0b7",
  "pyperclip>=1.11.0",
]

[project.optional-dependencies]
tui = ["textual"]
clipboard = ["pyperclip"]

[dependency-groups]
dev = [
  "black>=26.1.0",
  "grpcio-tools>=1.78.0",
  "jinja2>=3.1.6",
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
]

[project.scripts]
anki = "anki_cli.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["anki_cli/proto"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["anki_cli/proto/**"]