[project]
name = "anki-cli"
version = "0.1.3"
description = "Hybrid Anki CLI for humans and agents"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "umangkaushik" }]
keywords = ["anki", "cli", "flashcards", "spaced-repetition", "education"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Utilities",
]
dependencies = [
  "click",
  "rich",
  "pydantic",
  "fsrs",
  "httpx>=0.27,<1",
  "betterproto>=2.0.0b7,<3",
  "pyperclip>=1.11.0",
  "markdownify>=1.2.2",
]
[project.optional-dependencies]
tui = ["textual", "prompt-toolkit"]
clipboard = ["pyperclip"]

[dependency-groups]
dev = [
  "black>=26.1.0",
  "grpcio-tools>=1.78.0",
  "jinja2>=3.1.6",
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
  "betterproto[compiler]>=2.0.0b7",
]

[project.scripts]
anki = "anki_cli.cli.app:main"

[project.urls]
Homepage = "https://github.com/ubermenchh/anki-cli"
Repository = "https://github.com/ubermenchh/anki-cli"
Issues = "https://github.com/ubermenchh/anki-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["anki_cli/proto"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["anki_cli/proto/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not tui'"
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
  "tui: tests requiring optional TUI dependencies",
  "slow: long-running tests",
]